--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,40 @@
     flex-grow: 1;
     height: 100%;
     float: right;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 40px;
+}
+
+#main-header {
+    width: 80%;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+#navigate {
+    flex-grow: 1;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    color: #0A0A0A;
+    float: left;
+}
+
+#search-button {
+    font-size: 30pt;
+    width: 30px;
+    height: auto;
+    color: #0A0A0A;
+    cursor: pointer;
+    float: right;
+}
+
+#main-content {
+    width: 80%;
+    height: 100%;
 }
