--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -1,7 +1,7 @@
 #sidebar {
     height: 100%;
     width: 65px;
-    background: #0a0a0a;
+    background: #0A0A0A;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,7 +28,7 @@
 #titlebar {
     width: 100%;
     height: 20px;
-    background: #0a0a0a;
+    background: #0A0A0A;
     position: fixed;
     -webkit-app-region: drag;
     border-bottom: solid 1px rgba(255, 255, 255, 0.26);
