--- a/css/main.css
+++ b/css/main.css
@@ -72,3 +72,110 @@
     padding-left: 20px;
     width: 90%;
 }
+
+.form-table {
+    width: 95%;
+    height: 95%;
+    margin: 0 auto;
+}
+
+*:focus {
+    outline: none;
+}
+
+.form-row {
+    width: 100%;
+    display: block;
+    margin-top: 15px;
+    box-sizing: border-box;
+}
+
+.form-col {
+    height: 30px;
+    padding-right: 8px;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.form-input {
+    width: 100%;
+    height: 23px;
+    border: none;
+    padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    box-sizing: border-box;
+    margin: 0;
+    font-family: helvetica;
+    letter-spacing: .1em;
+    font-weight: 300;
+    font-size: 11pt;
+    background: none;
+}
+
+.form-input[type="submit"] {
+    background: #FFF;
+    color: #C0B283;
+    border: solid 1px #C0B283;
+    cursor: pointer;
+    margin-top: 13px;
+    font-weight: normal;
+    height: auto;
+    width: auto;
+    padding: 10px 20px 10px 20px;
+}
+
+.form-input[type="submit"]:active {
+    background: #C0B283;
+    color: #FFF;
+}
+
+.form-input[type="text"] {
+    border-bottom: solid 1px #CCC;
+}
+
+textarea.form-input {
+    margin-top: 20px;
+    border: solid 1px #CCC;
+    resize: none;
+    padding: 5px;
+}
+
+.form-input[type="text"]:focus,
+.form-text-input-active {
+    transition-duration: .1s;
+    border-bottom: solid 1px #C0B283 !important;
+}
+
+label {
+    position: absolute;
+    float: left;
+    transform: translate(7px, 4px);
+    text-transform: uppercase;
+    font-family: helvetica;
+    font-weight: 300;
+    color: #333;
+    font-size: 10pt;
+    transition-duration: .1s;
+    z-index: -1;
+}
+
+.form-col:focus-within .form-text-input-label,
+.form-text-input-label-active {
+    transition-duration: .1s;
+    color: #C0B283;
+    font-size: 8pt;
+    font-weight: normal;
+    transform: translate(2px, -10px);
+}
+
+.form-col:focus-within .form-textarea-label,
+.form-textarea-label-active {
+    transition-duration: .1s;
+    color: #C0B283;
+}
+
+textarea.form-input:focus, .form-textarea-input-active {
+    transition-duration: .1s;
+    border: solid 1px #C0B283 !important;
+}
