--- a/css/main.css
+++ b/css/main.css
@@ -179,3 +179,44 @@ textarea.form-input:focus, .form-textarea-input-active {
     transition-duration: .1s;
     border: solid 1px #C0B283 !important;
 }
+
+/* FILTER TABLE */
+.filter-table {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+}
+
+.filter-table-header-row {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    height: 30px;
+    border-bottom: solid 1px #C0B283;
+}
+
+.filter-table-header-column {
+    font-size: 8pt;
+    text-align: left;
+    text-transform: uppercase;
+    font-family: helvetica;
+    font-weight: 650;
+    letter-spacing: .05em;
+}
+
+tbody {
+    display: block;
+    overflow-y: scroll;
+    max-height: 500px;
+    width: 100%;
+    font-size: 10pt;
+    font-family: helvetica;
+    font-weight: 300;
+    letter-spacing: .03em;
+}
+
+tbody tr {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+}
