--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -56,6 +56,7 @@
     width: 33px;
     height: 28px;
     position: absolute;
+    top: -1000px;
     background: #C0B283;
     border-radius: 5px;
     z-index: 0 !important;
