Added adding functionality and message prompts. Fixed numpy matrix string truncation.

--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ label {
     color: #C0B283;
 }
 
-textarea.form-input:focus, .form-textarea-input-active {
+textarea.form-input:focus, .form-textarea-active {
     transition-duration: .1s;
     border: solid 1px #C0B283 !important;
 }
@@ -204,6 +204,10 @@ textarea.form-input:focus, .form-textarea-input-active {
     letter-spacing: .05em;
 }
 
+.filter-table-column {
+    word-wrap: break-word;
+}
+
 tbody {
     display: block;
     overflow-y: scroll;
@@ -219,4 +223,5 @@ tbody tr {
     display: table;
     table-layout: fixed;
     width: 100%;
+    margin-bottom: 3px;
 }
