--- a/GUI/css/index.css
+++ b/GUI/css/index.css
@@ -7,53 +7,83 @@ html, body {
     position: absolute;
     top: 0;
     left: 0;
-    overflow-y: hidden;
+    overflow-y: scroll;
     background: white;
 }
 
-#overlay {
-    padding: 0;
+#main-wrapper {
     margin: 0;
+    padding: 0;
+    height: auto;
+    width: 500px;
+    flex-grow: 1;
+    float: right;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 60px;
+    opacity: 1;
+}
+
+#toggle-prompt {
     position: absolute;
-    left: 0;
-    right: 0;
-    z-index: 101;
-    width: 100%;
-    height: 100%;
+    font-family: helvetica;
+    font-size: 11pt;
+    letter-spacing: .07em;
+    color: white;
+    line-height: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: #0A0A0A;
+    z-index: 99;
 }
 
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+.toggle-button {
+    width: 250px;
+    height: 60px;
+    margin: 3px;
+    background: none;
+    border: solid 2px #C0B283;
+    outline: none;
+    color: #C0B283;
+    font-size: 11pt;
+    font-family: helvetica;
+    font-weight: 200;
+    text-transform: uppercase;
+    cursor: pointer;
 }
 
-@keyframes fadeOut {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        background: transparent;
-        display: none;
-        z-index: -1;
-    }
+.toggle-button:active {
+    color: black;
+    font-weight: 400;
+    background: #B8A35F;
 }
 
-#logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: fadeIn .2s ease forwards;
-    transform-origin: center;
-    width: 230px;
+.hidden {
+    display: none !important;
 }
 
-.overlay-hidden {
-    animation: fadeOut .2s ease forwards;
+button {
+    user-select: none;
+}
+
+.action-button-container {
+    width: 87%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    background: white;
+    border-top: solid 1px #ccc;
+}
+
+.action-button {
+    width: 250px !important;
+    margin: 0 14px;
+}
+
+.spacer {
+    flex-grow: 1;
 }
