--- a/GUI/css/toolbar.css
+++ b/GUI/css/toolbar.css
@@ -1,5 +1,5 @@
 #sidebar {
-    position: absolute;
+    position: fixed;
     z-index: 99;
     left: -235px;
     height: 100%;
@@ -33,7 +33,7 @@
     transform: translateX(235px);
 }
 
-.sidebar-full + #main {
+.sidebar-full + #main-wrapper {
     filter: grayscale(80%);
     opacity: .5;
     cursor: default;
@@ -57,17 +57,25 @@
     border-left: solid 1px #333;
 }
 
-.sidebar-button {
+.view-button {
     color: #C0B283;
     background: none;
     outline: none;
     font-size: 20pt;
-    margin-top: 30px;
+    margin-top: 20px;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
+    width: 40px;
+    height: 35px;
 }
 
-.sidebar-button:active {
+.view-button-active {
+    color: #0A0A0A;
+    background: #C0B283;
+}
+
+.view-button:active {
     opacity: .5;
 }
 
@@ -79,22 +87,6 @@
     z-index: 100;
     -webkit-app-region: drag;
     border-bottom: solid 1px rgba(255, 255, 255, 0.26);
-}
-
-.option-selected {
-    transition-duration: .3s;
-    color: #0A0A0A;
-}
-
-#option-selector {
-    width: 33px;
-    height: 28px;
-    position: absolute;
-    top: -1000px;
-    background: #C0B283;
-    border-radius: 5px;
-    transform: translateX(-16px);
-    z-index: 0 !important;
 }
 
 #settings {
